test/Fail/InstanceArgumentsModNotParameterised.err
InstanceArgumentsModNotParameterised.agda:14.6-7: error: [ModuleArityMismatch]
The module C is not parameterized, but is being applied to
arguments
when checking the module application module _ = C {{...}}
